--- a/frontend/src/components/test.htm
+++ b/frontend/src/components/test.htm
@@ -1,94 +1,44 @@
-<table class="table-auto relative w-full text-sm text-left rtl:text-right  ">
-    <thead class="text-xs  uppercase bg-[#01b6ee] text-white font-light">
-        <tr>
-            <th scope="col" class="sticky bg-[#01b6ee] z-30 top-0 px-6 py-3 whitespace-nowrap left-0">Request ID</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-30 top-0 px-6 py-3  left-[116px]">Customer</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-30 top-0 px-6 py-3 whitespace-nowrap left-[228px]">Carrier Name
-            </th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">SCAC</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">Phase</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">Completion</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">Milestone</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">Ticket</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3 whitespace-nowrap">TP Specialist</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-9 py-3 whitespace-nowrap">Action Owner</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-9 py-3 whitespace-nowrap">CQ Validation</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-9 py-3 whitespace-nowrap">Trading Partner Setup
-            </th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-9 py-3 whitespace-nowrap">SFTP Testing</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3">Testing</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-9 py-3 whitespace-nowrap">Go Live</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3 whitespace-nowrap">Status/Next Steps</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3 whitespace-nowrap">Internal Notes</th>
-            <th scope="col" class="sticky bg-[#01b6ee] z-20 top-0 px-6 py-3 whitespace-nowrap"></th>
-        </tr>
-    </thead>
-    <tbody class="">
-        <div class="hidden">
-            <div
-                class="h-screen w-screen fixed bg-black bg-opacity-20 backdrop-blur-sm z-50 transition-opacity	duration-700">
-                <div class="flex flex-col h-screen items-center justify-center">
-                    <form enctype="multipart/form-data">
-                        <div class="bg-white  rounded-md p-8 flex flex-col">
-                            <div class="font-bold text-xl">Upload document</div>
-                            <div class="text-xs mt-3 text-[#E84500]">Note: Ensure that the document contains all the
-                                necessary details required for the trading partner setup.</div>
-                            <div class="text-xs mt-3 text-[#E84500]"></div>
-                            <div
-                                class="mt-4 p-3  self-center rounded-lg border-[#01b6ee] flex items-center justify-center">
-                                <div class="mx-2"><input type="file"
-                                        class="text-gray-500 file:text-white block w-52 border-2 border-[#01b6ee] rounded text-sm disabled:opacity-50 disabled:pointer-events-none file:bg-[#01b6ee] file:border-0 file:me-2 file:py-2 file:px-1">
-                                </div>
-                            </div>
-                            <div class="flex justify-around mt-6"><button
-                                    class="border h-8 w-24 flex items-center justify-center rounded-lg border-[#01b6ee] text-[#01b6ee]">Cancel</button>
-                                <div
-                                    class="cursor-pointer border h-8 w-24 flex items-center justify-center rounded-lg bg-[#01b6ee] text-white">
-                                    Submit</div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="scale-0">
-            <div
-                class="bg-opacity-20 backdrop-blur-sm bg-black h-screen w-screen fixed z-30 top-0 left-0 flex items-center justify-center">
-                <div class="bg-white w-full  border-2 mx-52 rounded flex flex-col items-end"><button
-                        class="justify-right mx-4 py-2"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"></path>
-                        </svg></button>
-                    <div class="flex items-start w-full px-4 pb-4">
-                        <div class="flex flex-col items-start w-full h-52 overflow-auto">
-                            <div class="font-bold my-2 p-2 w-full"></div>
-                        </div>
-                        <div class="flex flex-col w-96  "><textarea class="flex flex-col m-2 h-36"></textarea><button
-                                class="flex flex-col m-2 bg-[#01b6ee] rounded h-10 items-center justify-center text-white font-medium">Add
-                                Note</button></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="scale-0">
-            <div
-                class="bg-opacity-20 backdrop-blur-sm bg-black h-screen w-screen fixed z-30 top-0 left-0 flex items-center justify-center">
-                <div class="bg-white w-full  border-2 mx-52 rounded flex flex-col items-end"><button
-                        class="justify-right mx-4 py-2"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"></path>
-                        </svg></button>
-                    <div class="flex items-start w-full px-4 pb-4">
-                        <div class="flex flex-col items-start w-full h-52 overflow-auto">
-                            <div class="font-bold my-2 p-2 w-full"></div>
-                        </div>
-                        <div class="flex flex-col w-96  "><textarea class="flex flex-col m-2 h-36"></textarea><button
-                                class="flex flex-col m-2 bg-[#01b6ee] rounded h-10 items-center justify-center text-white font-medium">Add
-                                Note</button></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <tr class="bg-white text-left border-b ">
-            <td scope="row" class="px-6 py-4 sticky left-0 bg-white z-20">0501wy5</td>
-            <td scope="row" class="p
+/* Property 1=Variant2 */
+
+box-sizing: border-box;
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 25px;
+gap: 10px;
+
+position: absolute;
+width: 190px;
+height: 51px;
+left: 20px;
+top: 91px;
+
+background: radial-gradient(50% 50% at 50% 50%, #D763FF 0%, rgba(10, 71, 242, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(0deg, #0A47F2, #0A47F2), radial-gradient(342.89% 359.97% at 49.74% 48.94%, rgba(10, 71, 242, 0.5) 0%, rgba(181, 201, 255, 0.5) 100%), linear-gradient(0deg, #0A47F2 79.79%, #B5C9FF 122.34%);
+box-shadow: -5px -5px 12px rgba(215, 99, 255, 0.2), 5px 5px 12px 10px rgba(138, 136, 255, 0.2);
+border-radius: 36px;
+
+
+/* Get Started Now */
+
+width: 140px;
+height: 27px;
+
+/* Text/Medium/Bold */
+font-family: 'Satoshi';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+/* identical to box height, or 27px */
+
+/* Colors/B&W/White */
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
